[gd_scene load_steps=6 format=3 uid="uid://clfxmqewxp17y"]

[ext_resource type="LabelSettings" uid="uid://tpqbj26s5tfk" path="res://assets/gl_48_wh.tres" id="1_clavi"]
[ext_resource type="Script" path="res://hud/hud.gd" id="1_rmisf"]
[ext_resource type="Texture2D" uid="uid://dqn6251egj14n" path="res://assets/items/pixel heart 2.png" id="2_wji6k"]
[ext_resource type="LabelSettings" uid="uid://blaakrxepfcax" path="res://assets/lg_64_title.tres" id="3_svy3v"]
[ext_resource type="LabelSettings" uid="uid://b4nx4u1brwi15" path="res://assets/lg_24_sub_title.tres" id="4_eoj2t"]

[node name="HUD" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rmisf")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HB" type="HBoxContainer" parent="MC"]
layout_mode = 2
size_flags_vertical = 0

[node name="ScoreLabel" type="Label" parent="MC/HB"]
layout_mode = 2
size_flags_horizontal = 3
text = "00000"
label_settings = ExtResource("1_clavi")

[node name="HBHearts" type="HBoxContainer" parent="MC/HB"]
layout_mode = 2

[node name="L1" type="TextureRect" parent="MC/HB/HBHearts"]
layout_mode = 2
texture = ExtResource("2_wji6k")
stretch_mode = 5

[node name="L2" type="TextureRect" parent="MC/HB/HBHearts"]
layout_mode = 2
texture = ExtResource("2_wji6k")
stretch_mode = 5

[node name="L3" type="TextureRect" parent="MC/HB/HBHearts"]
layout_mode = 2
texture = ExtResource("2_wji6k")
stretch_mode = 5

[node name="L4" type="TextureRect" parent="MC/HB/HBHearts"]
layout_mode = 2
texture = ExtResource("2_wji6k")
stretch_mode = 5

[node name="L5" type="TextureRect" parent="MC/HB/HBHearts"]
layout_mode = 2
texture = ExtResource("2_wji6k")
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.00392157, 0.0980392, 0.705882)

[node name="VB_LevelComplete" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VB_LevelComplete"]
layout_mode = 2
text = "LEVEL COMPLETE!"
label_settings = ExtResource("3_svy3v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="VB_LevelComplete"]
layout_mode = 2
text = "Press space for next level"
label_settings = ExtResource("4_eoj2t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VB_GameOver" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VB_GameOver"]
layout_mode = 2
text = "Game Over"
label_settings = ExtResource("3_svy3v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="VB_GameOver"]
layout_mode = 2
text = "Press space for main menu"
label_settings = ExtResource("4_eoj2t")
horizontal_alignment = 1
vertical_alignment = 1
